testsuite/tests/linear/should_fail/LinearLet8.stderr

LinearLet8.hs:6:12: error: [GHC-76037]
    Not in scope: type variable ‘p’
